segundo avance, algo de login

--- a/account.html
+++ b/account.html
@@ -14,7 +14,7 @@
 <body>
     <header class="encabezado">
         <img class="encabezado__logo" src="/img/netflix-logo.png" alt="">
-        <button class="encabezado__icon" id="administrar" ><i class="fas fa-pencil-alt"></i><span>Administrar</span></button>
+        <button class="encabezado__icon" id="administrar" ><i class="fas fa-pen"></i><span>Administrar</span></button>
     </header>
     <section id="cuentas">
         <div class="cuentas__txt" id="titulo">
@@ -23,27 +23,27 @@
         <div class="contenedor">
             <div class="contenedor__cuenta">
                 <img class="contenedor__cuenta__img" src="/img/account/el-rey-leon.jpg" alt="">
-                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pencil-alt lapiz"></i></div>
+                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Simeon</span>    
             </div>
             <div class="contenedor__cuenta">
                 <img class="contenedor__cuenta__img" src="/img/account/Treecko.png" alt="">
-                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pencil-alt lapiz"></i></div>
+                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Carlos</span>    
             </div>
             <div class="contenedor__cuenta">
                 <img class="contenedor__cuenta__img" src="/img/account/naruto.jpg" alt="">
-                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pencil-alt lapiz"></i></div>
+                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Jherson</span>    
             </div>
             <div class="contenedor__cuenta">
                 <img class="contenedor__cuenta__img" src="/img/account/conejo.jpg" alt="">
-                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pencil-alt lapiz"></i></div>
+                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Gimenita 🤩</span>    
             </div>
             <div class="contenedor__cuenta">
                 <img class="contenedor__cuenta__img" src="/img/account/kids.jpg" alt="">
-                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pencil-alt lapiz"></i></div>
+                <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Kids</span>    
             </div>
         </div>
@@ -51,5 +51,4 @@
     <script src="https://kit.fontawesome.com/c577200585.js" crossorigin="anonymous"></script>
     <script src="js/account.js"></script>
 </body>
-
 </html>
