--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Netflix</title>
 </head>
 <body>
-    <script > window.location.href = "/login.html"; </script>
+    <script>
+        window.location.href = "login.html";
+    </script>
 </body>
 </html>
