--- a/login.html
+++ b/login.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Netflix</title>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="/img/Netflix_2015_N_logo.svg" type="image/svg">
+    <link rel="icon" href="img/Netflix_2015_N_logo.svg" type="image/svg">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="encabezado">
-        <img class="encabezado__logo" src="/img/netflix-logo.png" style="filter: brightness(120%);"alt="">
+        <img class="encabezado__logo" src="img/netflix-logo.png" style="filter: brightness(120%);"alt="">
     </header>
     <section id="formulario">
         <h1 class="formulario__txt">Inicia sesión</h1>
