--- a/account.html
+++ b/account.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account - Netflix</title>
-    <link rel="stylesheet" href="/css/account.css">
+    <link rel="stylesheet" href="./css/account.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="/img/netflix-icono.png" type="image/png">
+    <link rel="icon" href="./img/netflix-icono.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="encabezado">
-        <img class="encabezado__logo" src="/img/netflix-logo.png" alt="">
+        <img class="encabezado__logo" src="./img/netflix-logo.png" alt="">
         <button class="encabezado__icon" id="administrar" ><i class="fas fa-pen"></i><span>Administrar</span></button>
     </header>
     <section id="cuentas">
@@ -22,33 +22,33 @@
         </div>
         <div class="contenedor">
             <div class="contenedor__cuenta">
-                <img class="contenedor__cuenta__img" src="/img/account/el-rey-leon.jpg" alt="">
+                <img class="contenedor__cuenta__img" src="./img/account/el-rey-leon.jpg" alt="">
                 <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Simeon</span>    
             </div>
             <div class="contenedor__cuenta">
-                <img class="contenedor__cuenta__img" src="/img/account/Treecko.png" alt="">
+                <img class="contenedor__cuenta__img" src="./img/account/Treecko.png" alt="">
                 <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Carlos</span>    
             </div>
             <div class="contenedor__cuenta">
-                <img class="contenedor__cuenta__img" src="/img/account/naruto.jpg" alt="">
+                <img class="contenedor__cuenta__img" src="./img/account/naruto.jpg" alt="">
                 <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Jherson</span>    
             </div>
             <div class="contenedor__cuenta">
-                <img class="contenedor__cuenta__img" src="/img/account/conejo.jpg" alt="">
+                <img class="contenedor__cuenta__img" src="./img/account/conejo.jpg" alt="">
                 <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Gimenita 🤩</span>    
             </div>
             <div class="contenedor__cuenta">
-                <img class="contenedor__cuenta__img" src="/img/account/kids.jpg" alt="">
+                <img class="contenedor__cuenta__img" src="./img/account/kids.jpg" alt="">
                 <div class="lapiz-edicion lapiz-oculto"><i class="fas fa-pen lapiz"></i></div>
                 <span class="contenedor__cuenta__txt">Kids</span>    
             </div>
         </div>
     </section>
     <script src="https://kit.fontawesome.com/c577200585.js" crossorigin="anonymous"></script>
-    <script src="js/account.js"></script>
+    <script src="http://localhost/netflix/js/account.js"></script>
 </body>
 </html>
