--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
 </head>
-<body>
-    
+<body>  
+    <script>
+        window.location.href = "./login.html";
+    </script>
 </body>
 </html>
