--- a/movie.html
+++ b/movie.html
@@ -70,10 +70,10 @@
             <div class="opciones__division division__ocultar">
                 <i class="fas fa-times-circle" id="opciones__ocultar"></i>
             </div>
-            <div class="opciones__division">
+            <a href="./account.html" class="opciones__division">
                 <img src="./img/account/el-rey-leon.jpg" alt="">
                 <span>Simeon</span>
-            </div>
+            </a>
             <div class="opciones__overflow">
                 <div class="opciones__division">
                     <span>Notificaciones</span>
