--- a/movie.html
+++ b/movie.html
@@ -563,9 +563,12 @@
     
     <!--script de gliderJs-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.min.js" integrity="sha512-tHimK/KZS+o34ZpPNOvb/bTHZb6ocWFXCtdGqAlWYUcz+BGHbNbHMKvEHUyFxgJhQcEO87yg5YqaJvyQgAEEtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
     <!--Kit de iconos-->
     <script src="https://kit.fontawesome.com/42778bfa5e.js" crossorigin="anonymous"></script>
 
-    <script src="./js/movie.js"></script>S
+    <script src="https://kit.fontawesome.com/9e7e6d804a.js" crossorigin="anonymous"></script>
+
+    <script src="./js/movie.js"></script>
 </body>
 </html>
