--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <section id="formulario">
         <h1 class="formulario__txt">Inicia sesión</h1>
         <div id="alerta-incompatible"><i class="fas fa-exclamation-triangle"></i>   Datos ingresados erroneos</div>
-        <form action="" id="formilario" class="formulario__elementos">
+        <form action="" id="form" class="formulario__elementos">
             <div>
                 <input class="formulario__textbox" name="correo" autocomplete="off" type="text" id="input__correo" placeholder="Email o número de teléfono">
                 <span class="formulario__notify" id="notify__correo">Ingrese un email o un número de teléfono válido.</span>    
@@ -27,7 +27,7 @@
                 <input class="formulario__textbox" name="password" type="password" id="input__password" placeholder="contraseña">
                 <span class="formulario__notify" id="notify__password">La contraseña debe tener entre 6 y 40 caracteres.</span>    
             </div>
-            <button class="formulario__enviar" type="submit">Iniciar sesion</button>
+            <button class="formulario__enviar" type="submit" href="account.html">Iniciar sesion</button>
             <label class="formulario__check" for=""><input type="checkbox">Recuérdame</label>
         </form>
         <div>
